# pacman-GP

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp  meson.build
.github/workflows/: clang-format.yml  cmake-single-platform.yml  nix-project-build.yml  project-build.yml  update-flake.yml
Logic/: CMakeLists.txt  Observer.h  Random.cpp  Score.cpp  Stopwatch.cpp  Subject.h  World.h
Logic/Types/: Collectable.h  Ghost.h  Pacman.h  Wall.h
Representation/: Camera.h  ConcreteEntityFactory.h  Game.cpp  Game.h  State.cpp  State.h  Statemanager.cpp  Statemanager.h
Representation/EntityView/: EntityView.h
Representation/State/: LevelState.cpp  MenuState.cpp  State.h  VictoryState.cpp
assets/: .highscores  testworldmap  worldmap
diagrams/: full_diagram.puml  inheritance_diagram.puml
logic/: AbstractEntityFactory.cpp  AbstractEntityFactory.h  CMakeLists.txt  Direction.h  EntityModel.cpp  EntityModel.h  IDirectionalEntityModel.cpp  IDirectionalEntityModel.h  IEntityFactory.h  IEntityModel.cpp  IEntityModel.h  IObserver.h  ISubject.cpp  ISubject.h  IWorldConfigParser.h  LogicConstants.h  Observer.h  Position.cpp  Position.h  Random.cpp  Random.h  Score.cpp  Score.h  ScoreKeeper.cpp  ScoreKeeper.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  Visitor.cpp  Visitor.h  World.cpp  World.h  WorldAsciiGridParser.cpp  WorldAsciiGridParser.h  WorldCreator.cpp  WorldCreator.h  meson.build
logic/EntityType/: Collectable.cpp  Collectable.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Wall.cpp
logic/entityType/: Collectable.cpp  Collectable.h  Direction.h  Ghost.cpp  Ghost.h  IDirectionalEntityModel.cpp  IDirectionalEntityModel.h  IEntityModel.cpp  IEntityModel.h  ISubject.cpp  ISubject.h  Pacman.cpp  Pacman.h  SpawnWall.cpp  SpawnWall.h  Wall.cpp  Wall.h
logic/entity_types/: Collectable.cpp  Collectable.h  DirectionalEntity.cpp  DirectionalEntity.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Wall.cpp  Wall.h
logic/mapLoading/: IWorldConfigParser.h  WorldAsciiGridParser.h  WorldCreator.cpp  WorldCreator.h
logic/patterns/: IEntityFactory.h  Visitor.cpp  Visitor.h
representation/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  ConcreteEntityFactory.cpp  ConcreteEntityFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  GameConstants.h  ScoreView.cpp  ScoreView.h  SfmlConstants.h  Spritemap.cpp  Spritemap.h  StateManager.cpp  StateManager.h  Statemanager.cpp  Statemanager.h  ViewCompatibleEntityFactory.cpp  ViewCompatibleEntityFactory.h
representation/state/: AbstractState.h  GameOverState.cpp  GameOverState.h  IState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.h  VictoryState.cpp  VictoryState.h
representation/view/: CoinView.cpp  CoinView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  IDirectionalEntityView.cpp  IDirectionalEntityView.h  IEntityView.cpp  IEntityView.h  PacmanView.cpp  PacmanView.h  ScoreView.cpp  ScoreView.h  SpawnWallView.cpp  SpawnWallView.h  WallView.cpp  WallView.h
subprojects/: sfml.wrap
